force-app/main/default/objects/NumberingSequence__c/NumberingSequence__c.object-meta.xml
<CustomObject>
    <description>Compteur transactionnel utilisé lors de l'émission d'un document.</description>
    <label>Séquence de numérotation</label>
    <nameField>
        <label>Clé de séquence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Séquences de numérotation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>