force-app/main/default/objects/NumberingSequence__c/fields/BillingEntity__c.field-meta.xml
<CustomField><fullName>BillingEntity__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Entité de facturation</label><referenceTo>BillingEntity__c</referenceTo><relationshipLabel>Séquences</relationshipLabel><relationshipName>NumberingSequences</relationshipName><required>true</required><type>Lookup</type></CustomField>