force-app/main/default/objects/NumberingSequence__c/fields/NextNumber__c.field-meta.xml
<CustomField><fullName>NextNumber__c</fullName><defaultValue>1</defaultValue><label>Prochain numéro</label><precision>12</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>