force-app/main/default/objects/NumberingSequence__c/fields/Padding__c.field-meta.xml
<CustomField><fullName>Padding__c</fullName><defaultValue>5</defaultValue><label>Nombre de chiffres</label><precision>2</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>