force-app/main/default/objects/NumberingSequence__c/fields/Prefix__c.field-meta.xml
<CustomField><fullName>Prefix__c</fullName><defaultValue>&quot;FAC&quot;</defaultValue><label>Préfixe</label><length>15</length><required>true</required><type>Text</type></CustomField>