force-app/main/default/objects/NumberingSequence__c/fields/Year__c.field-meta.xml
<CustomField><fullName>Year__c</fullName><label>Année</label><precision>4</precision><required>true</required><scale>0</scale><type>Number</type></CustomField>